[package]
name = "bno08x-rvc"
version = "0.1.1"
edition = "2018"
authors = ["Matvei Klimov <matvei@wheel.me>"]
description = "Small library to parse bno08x-sensor (bno080, bno085, bno086) output in RVC mode. Based on lockless queues."
readme = "README.md"

[dependencies]
bbqueue = "0.5.0"
postcard = { version = "0.7.2", default-features = false }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }


